@@ -119,11 +119,6 @@
       kept-old-versions   9
       kept-new-versions   9)
 
-;;;; startup
-
-;; Disable loading of the `site-start' file.
-(setq site-run-file nil)
-
 ;;;; custom
 
 (setq custom-file (locate-user-emacs-file "custom.el"))
