@@ -1,5 +1,10 @@
 2025-08-12  Zhengyi Fu  <i@fuzy.me>
 
+	* early-init.el: Do not clear `site-run-file'.  It does not work
+	since Emacs 31.
+
+2025-08-12  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (LaTeX-mode-hook, latex-mode-hook): Add
 	`turn-on-reftex'.
 
